templates/machinelearning/deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: machinelearning

spec:
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: machinelearning
      app.kubernetes.io/part-of: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: machinelearning
        app.kubernetes.io/part-of: immich
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - {key: app.kubernetes.io/name, operator: In, values: [machinelearning]}
                    - {key: app.kubernetes.io/part-of, operator: In, values: [immich]}
      containers:
        - name: machinelearning
          image: ghcr.io/immich-app/immich-machine-learning:v1.120.0
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 3003
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          emptyDir: {}
