templates/machinelearning/service.yml
---

apiVersion: v1
kind: Service
metadata:
  name: machinelearning

spec:
  selector:
    app.kubernetes.io/name: machinelearning
    app.kubernetes.io/part-of: immich
  ports:
    - name: http
      port: 3003
